style.css
@tailwind utilities;

input, select, div {
  /* 
  without this, w-32 does not produce input and select that are rendered as the same width (small difference)
  https://stackoverflow.com/questions/4073768/how-to-get-equal-width-of-input-and-select-fields
  */
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
}

